--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Description In this project, I am creating a 'TO DO' application. Here are the features:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
