--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/YasirUddin123/weekend-sql-to-do-list/issues"
   },
-  "homepage": "https://github.com/YasirUddin123/weekend-sql-to-do-list#readme"
+  "homepage": "https://github.com/YasirUddin123/weekend-sql-to-do-list#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
+  }
 }
